[package]
name = "swarm-bliss"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.1", features = ["full"] }
buttplug = "8.0.0"
futures = "0.3.30"
simple_logger = "5.0.0"
log = "0.4.22"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
